add Gestion clientes

--- a/Properties/Strings.es-MX.xaml
+++ b/Properties/Strings.es-MX.xaml
@@ -212,11 +212,25 @@
     <sys:String x:Key="Customers_Header">Clientes</sys:String>
     <sys:String x:Key="Customers_Desc">Visualiza, registra, modifica y elimina los clientes de pedidos a domicilio de Italia Pizza.</sys:String>
     <sys:String x:Key="Customers_BtnNewCustomer">Nuevo Cliente</sys:String>
+    <sys:String x:Key="Customers_BtnDeleteCustomer">Eliminar cliente</sys:String>
+    <sys:String x:Key="Customers_BtnEditCustomer">Editar cliente</sys:String>
     <sys:String x:Key="Customers_TitleTable">Lista de Clientes</sys:String>
+    <sys:String x:Key="Customers_DialogTDeleteCustomer">¿Eliminar cliente?</sys:String>
+    <sys:String x:Key="Customers_DialogDDeleteCustomer">¿Estás seguro de que deseas eliminar al cliente seleccionado?</sys:String>
+    <sys:String x:Key="Customers_DialogTDeletedCustomer">Cliente eliminado</sys:String>
+    <sys:String x:Key="Customers_DialogDDeletedCustomer">El cliente fue marcado como eliminado correctamente.</sys:String>
+    <sys:String x:Key="Customers_BtnReactivateCustomer">Reactivar cliente</sys:String>
+    <sys:String x:Key="Customers_DialogTReactivateCustomer">¿Reactivar cliente?</sys:String>
+    <sys:String x:Key="Customers_DialogDReactivateCustomer">¿Estás seguro de que deseas reactivar al cliente seleccionado? Se reincorporará a la plantilla del personal y se actualizará su fecha de contratación.</sys:String>
+    <sys:String x:Key="Customers_DialogTReactivatedCustomer">Client reactivado</sys:String>
+    <sys:String x:Key="Customers_DialogDReactivatedCustomer">El cliente fue reactivado correctamente. Ahora aparecerá nuevamente en la lista de clientes activos.</sys:String>
+
 
     <!--Register Customer-->
     <sys:String x:Key="RegCustomer_Header">Registrar cliente </sys:String>
     <sys:String x:Key="RegCustomer_Desc">Ingresa los datos del cliente que se desea registrar.</sys:String>
+    <sys:String x:Key="EditCustomer_Header">Editar cliente</sys:String>
+    <sys:String x:Key="EditCustomer_Desc">Modifica los datos del cliente que se desea actualizar.</sys:String>
     <sys:String x:Key="RegCostumer_CostumerInfo">Información del Cliente</sys:String>
     <sys:String x:Key="RegCostumer_PersonalInfo">Datos personales</sys:String>
     <sys:String x:Key="RegCostumer_AddressCostumer">Dirección del Cliente</sys:String>
@@ -225,6 +239,8 @@
     <sys:String x:Key="RegCostumer_BtnRegisterCostumer">Registrar Cliente</sys:String>
     <sys:String x:Key="RegCostumer_DialogTSuccess">Cliente registrado</sys:String>
     <sys:String x:Key="RegCostumer_DialogDSuccess">La información del cliente ha sido registrada correctamente y los datos han sido guardados con éxito.</sys:String>
+    <sys:String x:Key="RegCustomer_DialogTEditSuccess">Cliente actualizado</sys:String>
+    <sys:String x:Key="RegCustomer_DialogDEditSuccess">La información del cliente ha sido actualizada correctamente y los cambios han sido guardados con éxito.</sys:String>
 
     <!--Products-->
     <sys:String x:Key="Products_Header">Productos</sys:String>
