--- a/Views/SuppliesModule/SuppliesPage.xaml
+++ b/Views/SuppliesModule/SuppliesPage.xaml
@@ -30,13 +30,15 @@
                                Text="{DynamicResource Supplies_Desc}"/>
                 </StackPanel>
 
-                <StackPanel Grid.Column="1" Orientation="Vertical" Margin="0,0,20,10"  
+                <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="0,0,20,10"  
                             HorizontalAlignment="Right" VerticalAlignment="Bottom">
                     <Button x:Name="BtnNewSupply" Style="{DynamicResource PrimaryButtonStyle}"
                             Content="{DynamicResource Supplies_BtnNewSupply}"
-                            Click="Click_BtnNewSupply" >
+                            Click="Click_BtnNewSupply"  Margin="0, 0, 10, 0">
                         <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
                     </Button>
+                    <Button x:Name="BtnRegisterSupplyWaste" Style="{DynamicResource PrimaryButtonNoIconStyle}"
+                            Content="{DynamicResource Stock_BtnRegisterWaste}" Click="Click_BtnRegisterWaste"/>
                 </StackPanel>
             </Grid>
         </Border>
