--- a/Views/CashRegisterModule/CashRegisterPage.xaml
+++ b/Views/CashRegisterModule/CashRegisterPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ItaliaPizzaClient.Views.CashRegisterPage"
+﻿<Page x:Class="ItaliaPizzaClient.Views.CashRegisterModule.CashRegisterPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -117,7 +117,7 @@
                                     Margin="20 10">
                             <Border Padding="0 8"
                                     BorderBrush="{StaticResource BorderBrush}" BorderThickness="1"
-                                    CornerRadius="12" Height="Auto" Width="150">
+                                    CornerRadius="12" Height="Auto" Width="140">
                                 <Grid >
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto"/>
@@ -134,6 +134,31 @@
                                                    Style="{DynamicResource DescriptionLabelStyle}"
                                                    Margin="0 0 0 4"/>
                                         <TextBlock x:Name="TbBalance" 
+                                                   Style="{DynamicResource SubtitleLabelStyle}"/>
+                                    </StackPanel>
+                                </Grid>
+                            </Border>
+                            
+                            <Border Padding="0 8"
+                                    Margin="16 0"
+                                    BorderBrush="{StaticResource BorderBrush}" BorderThickness="1"
+                                    CornerRadius="12" Height="Auto" Width="140">
+                                <Grid >
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Image Source="/Resources/Icons/inflow-icon.png"
+                                           RenderOptions.BitmapScalingMode="HighQuality"
+                                           Width="22" Height="22"
+                                           Margin="12 0"/>
+
+                                    <StackPanel Grid.Column="1" VerticalAlignment="Center">
+                                        <TextBlock Text="{DynamicResource CashRegister_Inflow}"
+                                                   Style="{DynamicResource DescriptionLabelStyle}"
+                                                   Margin="0 0 0 4"/>
+                                        <TextBlock x:Name="TbInflow" 
                                                    Style="{DynamicResource SubtitleLabelStyle}"/>
                                     </StackPanel>
                                 </Grid>
