--- a/Views/CashRegisterModule/OpeningCash.xaml
+++ b/Views/CashRegisterModule/OpeningCash.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="ItaliaPizzaClient.Views.UserControls.ClosingCash"
+﻿<UserControl x:Class="ItaliaPizzaClient.Views.CashRegisterModule.OpeningCash"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ItaliaPizzaClient.Views.UserControls"
              mc:Ignorable="d" 
-             MinWidth="270" MinHeight="180" 
-             HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+             d:DesignHeight="210" d:DesignWidth="280">
     <Border Background="{DynamicResource SecondaryButtonBrush}"
             CornerRadius="14" BorderThickness="1"
             BorderBrush="{DynamicResource BorderBrush}" >
@@ -20,7 +19,7 @@
             <StackPanel Grid.Row="0" VerticalAlignment="Bottom" 
                         Margin="20 0" 
                         Orientation="Horizontal">
-                <TextBlock Text="{DynamicResource CashRegister_BtnCloseRegister}"
+                <TextBlock Text="{DynamicResource CashRegister_BtnOpenRegister}"
                            Style="{DynamicResource SubtitleLabelStyle}"/>
             </StackPanel>
 
@@ -31,33 +30,24 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-
-                    <TextBox x:Name="TbCashBalance"
-                             Grid.Row="0" Grid.ColumnSpan="2"
-                             Style="{DynamicResource TextBoxStyle}"
-                             Tag="{DynamicResource CashRegister_TbCashBalance}" />
-                    <TextBox x:Name="TxbDateOpening" 
-                             Grid.Column="0" Grid.Row="1"
+                    <TextBox x:Name="TxbDateOpening" Grid.Column="0"
                              Style="{DynamicResource TextBoxStyle}" 
-                             Tag="{DynamicResource CashRegister_TbDiference}"
-                             IsEnabled="False" Margin="0 8 10 0" />
-                    <TextBox x:Name="TbInitialBalance"
-                             Grid.Column="1" Grid.Row="1"
-                             Style="{DynamicResource TextBoxStyle}"
-                             Tag="{DynamicResource CashRegister_TbDiference}"
-                             Margin="10 8 0 0" />
+                             Tag="{DynamicResource CashRegister_TbOpeningDate}"
+                             IsEnabled="False" Margin="0 0 10 0" />
+
+                    <TextBox x:Name="TbInitialBalance" Grid.Column="1"
+                             Style="{DynamicResource TextBoxStyle}" 
+                             Tag="{DynamicResource CashRegister_TbInitialBalance}"
+                             Margin="10 0 0 0" />
                 </Grid>
 
                 <CheckBox x:Name="ConfirmOpenCashCheckBox"
                           Style="{DynamicResource CheckBoxStyle}"
-                          Content="{DynamicResource CashRegister_CheckBConfirmClosing}"
-                          Margin="5 4 0 10" IsChecked="False" />
+                          Content="{DynamicResource CashRegister_CheckBConfirmOpening}"
+                          Margin="5 4 0 0"
+                          IsChecked="False" />
             </StackPanel>
-
+            
             <Border Grid.Row="2" 
                     BorderBrush="{DynamicResource SecondaryBrush}" 
                     BorderThickness="0 0.5 0 0" Margin="24 0">
