--- a/Views/ProductsModule/RegisterProductPage.xaml
+++ b/Views/ProductsModule/RegisterProductPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ItaliaPizzaClient.Views.RegisterSupplyPage"
+﻿<Page x:Class="ItaliaPizzaClient.Views.ProductsModule.RegisterProductPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,8 +15,7 @@
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0" 
-                BorderThickness="0 0 0 1"
+        <Border Grid.Row="0" BorderThickness="0 0 0 1"
                 BorderBrush="{StaticResource BorderBrush}">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -28,9 +27,9 @@
                             HorizontalAlignment="Left" VerticalAlignment="Bottom">
                     <TextBlock x:Name="PageHeader"
                                Style="{StaticResource HeaderLabelStyle}"
-                               Text="{DynamicResource RegSupply_Header}"/>
+                               Text="{DynamicResource RegProduct_Header}"/>
                     <TextBlock x:Name="PageDescription" Style="{StaticResource DescriptionLabelStyle}"
-                               Text="{DynamicResource RegSupply_Desc}"/>
+                               Text="{DynamicResource RegProduct_Desc}"/>
                 </StackPanel>
             </Grid>
         </Border>
@@ -45,20 +44,22 @@
                     BorderBrush="{DynamicResource BorderBrush}" 
                     BorderThickness="0 0 1 0">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top"
-                            Margin="0,24" Width="200">
-
-                    <Image Name="SupplyImage"
-                               Source="/Resources/Images/default-supply-pic.png"
-                               HorizontalAlignment="Center" 
-                               VerticalAlignment="Center" 
-                               Stretch="UniformToFill" 
-                               RenderOptions.BitmapScalingMode="HighQuality">
+                            Margin="0 24" Width="200">
+                    <Image Name="ProductImage"
+                           Source="/Resources/Images/default-product-pic.png"
+                           HorizontalAlignment="Center" 
+                           VerticalAlignment="Center" 
+                           Stretch="UniformToFill" 
+                           RenderOptions.BitmapScalingMode="HighQuality"
+                           Visibility="Visible">
                         <Image.Clip>
-                            <RectangleGeometry Rect="0,0,200,200" RadiusX="12" RadiusY="12"/>
+                            <RectangleGeometry Rect="0 0 200 200" RadiusX="14" RadiusY="14"/>
                         </Image.Clip>
                     </Image>
 
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,8">
+                    <StackPanel Orientation="Horizontal" 
+                                HorizontalAlignment="Stretch" 
+                                Margin="0 8">
                         <Image Width="12" Height="12" Margin="0,0,4,0"
                                RenderOptions.BitmapScalingMode="HighQuality" 
                                Stretch="Uniform" ToolTip="{DynamicResource Glb_ValidImageFormat}"
@@ -67,17 +68,20 @@
                                    TextWrapping="Wrap"
                                    Text="{DynamicResource Glb_ValidImageFormat}"/>
                     </StackPanel>
-                    
+
                     <Button x:Name="BtnSelectImage"
                             Content="{DynamicResource Glb_BtnSelectImage}"
                             Style="{DynamicResource PrimaryButtonStyle}"
-                            Margin="0,12,0,6" Click="Click_BtnSelectImage">
+                            Margin="0 12 0 6" 
+                            Click="Click_BtnSelectImage">
                         <Button.Tag>/Resources/Icons/gallery-icon.png</Button.Tag>
                     </Button>
 
                     <Button x:Name="BtnDeleteImage" 
                             Content="{DynamicResource Glb_BtnDeleteImage}"
-                            Style="{DynamicResource DangerButtonStyle}">
+                            Style="{DynamicResource DangerButtonStyle}" 
+                            IsEnabled="False"
+                            Click="BtnDeleteImage_Click">
                         <Button.Tag>/Resources/Icons/delete-icon.png</Button.Tag>
                     </Button>
                 </StackPanel>
@@ -90,13 +94,14 @@
                 </Grid.RowDefinitions>
 
                 <StackPanel Grid.Row="0" VerticalAlignment="Bottom" Margin="20 0">
-                    <TextBlock Text="{DynamicResource RegSupply_SupplyInfo}"
+                    <TextBlock Text="{DynamicResource RegProduct_ProductInfo}"
                                Style="{DynamicResource SubtitleLabelStyle}"/>
                 </StackPanel>
 
-                <StackPanel Grid.Row="1" Orientation="Vertical" Margin="20 12 0 0">
-                    <TextBlock Text="Datos generales"
-                               Style="{DynamicResource DescriptionLabelStyle}" Margin="0,0,0,8"/>
+                <StackPanel Grid.Row="1" Orientation="Vertical" Margin="20,12,0,0">
+                    <TextBlock Text="{DynamicResource Glb_GeneralInfo}"
+                               Style="{DynamicResource DescriptionLabelStyle}" 
+                               Margin="0 0 0 8"/>
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="7*" MaxWidth="640"/>
@@ -112,42 +117,35 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
 
-                            <TextBox x:Name="TbSupplyName" 
+                            <TextBox x:Name="TbProductName" 
                                      Grid.ColumnSpan="2" Grid.Row="0"
-                                     Tag="{DynamicResource RegSupply_TbSupplyName}"
+                                     Tag="{DynamicResource RegProduct_TbProductName}"
                                      Style="{DynamicResource TextBoxStyle}"
                                      HorizontalAlignment="Stretch" VerticalAlignment="Top"
                                      Margin="0 0 0 10"
                                      TextChanged="RequiredFields_TextChanged"/>
-                            <StackPanel Grid.Column="0" Grid.Row="1" VerticalAlignment="Top"
-                                        Margin="0 0 10 0">
-                                <TextBox x:Name="TbSupplyBrand"
-                                         Tag="{DynamicResource RegSupply_TbSupplyBrand}"
-                                         Style="{DynamicResource TextBoxStyle}"
-                                         TextChanged="RequiredFields_TextChanged"/>
-                                <CheckBox x:Name="SupplyBrandCheckBox"
-                                          Style="{DynamicResource CheckBoxStyle}"
-                                          Content="{DynamicResource RegSupply_CheckBSupplyBrand}"
-                                          Margin="5 4 0 0"
-                                          IsChecked="False"
-                                          Checked="CheckbBrand_Checked"
-                                          Unchecked="CheckbBrand_Unchecked"/>
-                            </StackPanel>
+
                             <ComboBox x:Name="CbCategories"
-                                      Grid.Column="1" Grid.Row="1"
-                                      Tag="{DynamicResource RegSupply_CbCategory}"
+                                      Grid.Column="0" Grid.Row="1"
+                                      Tag="{DynamicResource Glb_TbCategory}"
                                       Style="{DynamicResource ComboBoxStyle}"
-                                      Margin="10 0 0 0"
+                                      Margin="0 0 10 0"
                                       VerticalAlignment="Top"
                                       SelectedValuePath="Id"
                                       SelectionChanged="RequiredFields_SelectionChanged"/>
+
+                            <TextBox x:Name="TbUnitPrice"
+                                     Grid.Column="1" Grid.Row="1"
+                                     Tag="{DynamicResource RegSupply_TbUnitPrice}"
+                                     Style="{DynamicResource TextBoxStyle}"
+                                     Margin="10 0 0 0"
+                                     TextChanged="RequiredFields_TextChanged"/>
                         </Grid>
                     </Grid>
 
-                    <TextBlock Text="Datos comerciales"
+                    <TextBlock Text="{DynamicResource RegProduct_PreparationDetails}"
                                Style="{DynamicResource DescriptionLabelStyle}"
                                Margin="0 12 0 8"/>
                     <Grid>
@@ -159,26 +157,55 @@
                         <Grid Grid.Column="0" HorizontalAlignment="Stretch">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBox x:Name="TbUnitPrice"
-                                     Grid.Column="0"
-                                     Tag="{DynamicResource RegSupply_TbUnitPrice}"
-                                     Style="{DynamicResource TextBoxStyle}"
-                                     Margin="0 0 10 0"
-                                     TextChanged="RequiredFields_TextChanged"/>
-                            <ComboBox x:Name="CbSupplyMeasure"
-                                      Grid.Column="1"
-                                      Tag="{DynamicResource RegSupply_CbSupplyMeasure}"
-                                      Style="{DynamicResource ComboBoxStyle}"
-                                      Margin="10 0 0 0"
-                                      SelectedValuePath="Id"
-                                      SelectionChanged="RequiredFields_SelectionChanged"/>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+                            <StackPanel>
+                                <TextBox x:Name="TbRecipe"
+                                         Tag="{DynamicResource RegProduct_TbRecipe}"
+                                         Style="{DynamicResource TextBoxStyle}"
+                                         IsReadOnly="True"/>
+                                <TextBox x:Name="TbProductSupply"
+                                         Tag="{DynamicResource RegProduct_TbProductSupply}"
+                                         Style="{DynamicResource TextBoxStyle}"
+                                         Visibility="Collapsed"/>
+                            </StackPanel>
+
+                            <StackPanel Grid.Column="1"
+                                        Orientation="Horizontal"
+                                        Margin="10 0 0 0">
+                                <Button x:Name="BtnAddRecipe" 
+                                        Style="{DynamicResource PrimaryButtonStyle}"
+                                        Content="{DynamicResource RegProduct_BtnAddRecipe}"
+                                        Click="Click_BtnAddRecipe">
+                                    <Button.Tag>/Resources/Icons/redirect-icon.png</Button.Tag>
+                                </Button>
+                                
+                                <Button x:Name="BtnSelectSupply" 
+                                        Style="{DynamicResource PrimaryButtonStyle}"
+                                        Content="{DynamicResource RegProduct_BtnSelectSupply}"
+                                        Visibility="Collapsed">
+                                    <Button.Tag>/Resources/Icons/redirect-icon.png</Button.Tag>
+                                </Button>
+                            </StackPanel>
+
+                            <CheckBox x:Name="NotIsPreparedCheckBox"
+                                      Grid.ColumnSpan="2" Grid.Row="1"
+                                      Style="{DynamicResource CheckBoxStyle}"
+                                      Content="{DynamicResource RegProduct_CheckBIsNotPrepared}"
+                                      Margin="5 4 0 0"
+                                      IsChecked="False"
+                                      Checked="CheckbPrepared_Checked"
+                                      Unchecked="CheckbPrepared_Unchecked"/>
                         </Grid>
                     </Grid>
 
-                    <TextBlock Text="Descripción del insumo"
+                    <TextBlock Text="{DynamicResource RegProduct_ProductDescription}"
                                Style="{DynamicResource DescriptionLabelStyle}"
                                Margin="0 12 0 8"/>
                     <Grid>
@@ -199,31 +226,36 @@
                         </Grid>
                     </Grid>
                 </StackPanel>
+
+
+
             </Grid>
+
         </Grid>
 
         <Border Grid.Row="2" 
                 BorderBrush="{DynamicResource BorderBrush}"
                 BorderThickness="0 1 0 0">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="20,0" VerticalAlignment="Center">
-                <Button x:Name="BtnCancel"
+            <StackPanel Orientation="Horizontal" 
+                        HorizontalAlignment="Right" 
+                        Margin="20 0" 
+                        VerticalAlignment="Center">
+                <Button x:Name="BtnCancel" 
                         Style="{DynamicResource SecondaryButtonNoIconStyle}"
                         Content="{DynamicResource Glb_Cancel}"
                         Margin="0 0 10 0"
                         Click="Click_BtnCancel"/>
-                
-                <Button x:Name="BtnRegisterSupply"
+                <Button x:Name="BtnRegisterProduct" 
                         Style="{DynamicResource PrimaryButtonStyle}"
-                        Content="{DynamicResource RegSupply_BtnRegisterSupply}"
-                        Click="Click_BtnRegisterSupply">
+                        Content="{DynamicResource RegProduct_BtnRegisterProduct}"
+                        Click="Click_BtnRegisterProduct">
                     <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
                 </Button>
-                
-                <Button x:Name="BtnEditSupply" 
-                Style="{DynamicResource PrimaryButtonStyle}"
-                Content="{DynamicResource RegSupply_BtnEditSupply}"
-                Click="Click_BtnEditSupply"
-                Visibility="Collapsed">
+                <Button x:Name="BtnEditProduct" 
+                        Style="{DynamicResource PrimaryButtonStyle}"
+                        Content="{DynamicResource RegProduct_BtnEditProduct}"
+                        Click="Click_BtnEditProduct"
+                        Visibility="Collapsed" Cursor="">
                     <Button.Tag>/Resources/Icons/edit-icon.png</Button.Tag>
                 </Button>
             </StackPanel>
