--- a/Views/RecipesModule/IngredientDetail.xaml
+++ b/Views/RecipesModule/IngredientDetail.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ItaliaPizzaClient.Views.SupplierOrdersModule.SupplyOrderDetail"
+﻿<UserControl x:Class="ItaliaPizzaClient.Views.RecipesModule.IngredientDetail"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:ItaliaPizzaClient.Views.UserControls"
+             xmlns:local="clr-namespace:ItaliaPizzaClient.Views.RecipesModule"
              mc:Ignorable="d"
              d:DesignHeight="68" d:DesignWidth="200">
     <Border Background="{StaticResource BackgroundBrush}"
@@ -16,30 +16,30 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Image Grid.Column="0" x:Name="SupplyPic"
+            <Image Grid.Column="0" x:Name="IngredientPic"
                    Source="{Binding ImageSource, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                   Width="44" Height="44" Stretch="Fill"
+                   Width="42" Height="42" Stretch="Fill"
                    HorizontalAlignment="Left"
                    VerticalAlignment="Top"
                    RenderOptions.BitmapScalingMode="HighQuality">
                 <Image.Clip>
-                    <RectangleGeometry Rect="0 0 44 44" RadiusX="8" RadiusY="8"/>
+                    <RectangleGeometry Rect="0 0 42 42" RadiusX="8" RadiusY="8"/>
                 </Image.Clip>
             </Image>
 
             <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center"
                         Margin="10 0 0 0">
-                <Grid Margin="0 0 0 0" Height="24">
+                <Grid Height="24">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock x:Name="SupplyTitle" Grid.Column="0"
-                               Text="{Binding SupplyName}"
+                    <TextBlock x:Name="IngredientTitle" Grid.Column="0"
+                               Text="{Binding IngredientName}"
                                Style="{DynamicResource RegularLabelStyle}"
                                FontFamily="{StaticResource SFProMedium}"
-                               FontSize="14"
+                               FontSize="12"
                                VerticalAlignment="Center"
                                TextTrimming="CharacterEllipsis" />
 
@@ -60,24 +60,12 @@
                 </Grid>
 
                 <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-
                     <TextBox x:Name="TbQuantity"
                              Text="{Binding QuantityText, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"
                              Style="{DynamicResource QuantityTextBoxStyle}"
                              IsEnabled="False"
-                             VerticalAlignment="Center" />
-
-                    <TextBlock Grid.Column="1"
-                               Text="{Binding Subtotal, StringFormat={}{0:C}}"
-                               Style="{StaticResource RegularLabelStyle}"
-                               Foreground="{StaticResource PrimaryButtonBrush}"
-                               HorizontalAlignment="Right"
-                               VerticalAlignment="Bottom"
-                               Margin="10 0 0 0" />
+                             VerticalAlignment="Center"
+                             HorizontalAlignment="Left" />
                 </Grid>
             </StackPanel>
         </Grid>
